clusters/pihole/apps/pihole/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: apps
  annotations:
    metallb.universe.tf/allow-shared-ip: "dns-shared-keys"
spec:
  type: LoadBalancer
  loadBalancerIP: "10.2.1.6"
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: apps
  annotations:
    metallb.universe.tf/allow-shared-ip: "dns-shared-keys"
spec:
  type: LoadBalancer
  loadBalancerIP: "10.2.1.6"
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dns
      protocol: TCP
      port: 53
      targetPort: 53
