clusters/pihole/apps/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: apps
  annotations:
    # set ingress controller
    ingressClassName: "traefik"
    # default settings for traefik
    traefik.ingress.kubernetes.io/router.middlewares: "routes-default-header@kubernetescrd, routes-pihole-add@kubernetescrd"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    # sticky session for traefik
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "cookies"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
    # flame dashboard stuff
    flame.pawelmalak/type: "app"
    flame.pawelmalak/name: "pihole"
    flame.pawelmalak/url: "https://pihole.adrp.xyz"
    flame.pawelmalak/icon: "raspberry-pi" # optional, default is "kubernetes" https://materialdesignicons.com/
  labels:
    group: pihole
spec:
  defaultBackend:
    service:
      name: pihole
      port:
        number: 80
  rules:
  - host: pihole.adrp.xyz
    http:
      paths:
      - backend:
          service:
            name: pihole
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: tls-cert-adrp-xyz
